# tsu_devSecSoftLab2

./: .gitignore  command.txt  command_git.txt  shell_command.txt  style.txt  t.t  Отчет.docx
SAT_DPLL/: BBV.cpp  boolequation.cpp  boolequation.h  boolinterval.cpp  boolinterval.h  main.cpp
SAT_DPLL/SatExamples/: Sat_ex11_3.pla  Sat_ex12_3.pla  sat_ex_1.pla  sat_ex_2.pla
SAT_DPLL_custom/: BBV.cpp  BBV.h  Branching_strategy.cc  Branching_strategy.h  CMakeLists.txt  NodeBoolTree.h  allocator_test.cc  boolequation.cpp  boolequation.h  boolinterval.cpp  boolinterval.h  laba_SAT1.pro  main.cpp  sat_solver
SAT_DPLL_custom/.PVS-Studio/State/: WindowState.json
SAT_DPLL_custom/SatExamples/: Sat_ex13_3.pla  Sat_ex14_3.pla
info/: SAT_DPLL.rar
lab_1/1/: a.out  main.cc
lab_1/2/: a.out  main.cc
lab_1/3/: a.out  main.cc
lab_1/4/: main.cc
lab_3/TargetProcess/TargetProcess/: TargetProcess.cpp  TargetProcess.vcxproj  TargetProcess.vcxproj.filters
lab_3/TargetProcess/TargetProcess/x64/Debug/: TargetProcess.exe.recipe  TargetProcess.ilk  vc143.idb
lab_3/TargetProcess/TargetProcess/x64/Debug/TargetProcess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab_3/demo/: CMakeLists.txt  build_for_linux.txt  exploit.py  mingw_toolchain.cmake  vuln_program.c
lab_3/example_lab/DLLInjectionLinkedIn/: DLLInjectionLinkedIn.sln  DLLInjectionLinkedIn.vcxproj  Prize.html
lab_3/example_lab/DLLInjectionLinkedIn/DLLInjectorAsProcess/: DLLInjectorAsProcess.vcxproj  Source.cpp
lab_3/example_lab/DLLInjectionLinkedIn/DLLLoader/: DLLLoader.vcxproj  Source.cpp
lab_3/example_lab/DLLInjectionLinkedIn/DllInjectorAsDll/: DllInjectorAsDll.vcxproj  Source.cpp
lab_3/example_lab/DLLInjectionLinkedIn/TargetProcess/: Source.cpp  TargetProcess.vcxproj
lab_3/example_lab/DLLInjectionLinkedIn/VirusDLL/: Source.cpp  VirusDLL.vcxproj
lab_3/infected_dll/TestDLL/: TestDLL.sln  TestDLL.vcxproj  TestDLL.vcxproj.filters  Virus.cpp  dllmain.cpp
lab_3/infected_dll/TestDLL/TestDLL/x64/Debug/: TestDLL.dll.recipe  TestDLL.ilk  vc143.idb
lab_3/infected_dll/TestDLL/TestDLL/x64/Debug/TestDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab_3/infected_dll/TestDLL/VirusDLL/x64/Debug/: VirusDLL.dll.recipe  VirusDLL.ilk  vc143.idb
lab_3/infected_dll/TestDLL/VirusDLL/x64/Debug/VirusDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab_3/infected_dll/TestDLL/x64/Debug/: DllInjectorAsDll.exp  DllInjectorAsDll.lib  TestDLL.exp  TestDLL.lib  TestInject.exp  TestInject.lib
lab_3/injection_dll/TestInject/: DllInjectorAsDll.cpp  TestInject.cpp  TestInject.vcxproj  TestInject.vcxproj.filters
lab_3/injection_dll/TestInject/x64/Debug/: DllInjectorAsDll.dll.recipe  DllInjectorAsDll.ilk  TestInject.dll.recipe  TestInject.exe.recipe  TestInject.ilk  vc143.idb
lab_3/injection_dll/TestInject/x64/Debug/DllInjectorAsDll.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DllInjectorAsDll.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab_3/injection_dll/TestInject/x64/Debug/TestInject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
